[package]
name = "wynnmap"
version = "1.0.0"
edition = "2024"

[workspace]
resolver = "2"
members = ["wynnmap-server", "wynnmap-types"]

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
codee = { version = "0.2.0", features = ["json_serde_wasm"] }
console_error_panic_hook = "0.1.7"
crc32fast = "1.4.2"
gloo-storage = "0.3.0"
leptos = { version = "0.7.7", features = ["csr"] }
leptos-use = { version = "0.15", default-features = false, features = [
    "use_websocket",
] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive", "rc"] }
serde_json = "1.0.139"
web-sys = { version = "0.3.77", features = ["Touch", "TouchList", "Navigator"] }
wynnmap-types = { path = "wynnmap-types" }

[profile.release]
lto = true
opt-level = "s"
strip = "debuginfo"
