[package]
name = "wynnmap"
version = "1.2.0"
edition = "2024"

[workspace]
resolver = "2"
members = ["wynnmap-server", "wynnmap-types"]

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
codee = { version = "0.3.0", features = ["json_serde_wasm"] }
console_error_panic_hook = "0.1.7"
crc32fast = "1.4.2"
gloo-file = "0.3.0"
gloo-storage = "0.3.0"
leptos = { version = "0.8", features = ["csr"] }
leptos-use = { version = "0.16", default-features = false, features = [
    "use_websocket",
] }
leptos_router = "0.8"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive", "rc"] }
serde_json = "1.0.139"
uuid = "1.16.0"
web-sys = { version = "0.3.77", features = [
    "Touch",
    "TouchList",
    "Navigator",
    "Clipboard",
] }
wynnmap-types = { path = "wynnmap-types" }
bitcode = "0.6.6"
base64 = "0.22.1"
zstd = "0.13.3"
thiserror = "2.0.12"
wasm-bindgen-futures = "0.4"
lz4_flex = "0.11.5"

[profile.release]
lto = true
opt-level = "s"
strip = "debuginfo"
