[package]
name = "wynnmap"
version = "1.2.2"
edition = "2024"

[workspace]
resolver = "2"
members = ["wynnmap-server", "wynnmap-types"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
codee = { version = "0.3", features = ["json_serde_wasm"] }
console_error_panic_hook = "0.1"
crc32fast = "1"
gloo-file = "0.3"
gloo-storage = "0.3"
leptos = { version = "0.8", features = ["csr"] }
leptos-use = { version = "0.18", default-features = false, features = [
    "use_websocket",
] }
leptos_router = "0.8"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
uuid = "1"
web-sys = { version = "0.3", features = [
    "Touch",
    "TouchList",
    "Navigator",
    "Clipboard",
] }
wynnmap-types = { path = "wynnmap-types" }
bitcode = "0.6"
base64 = "0.22"
zstd = "0.13"
thiserror = "2"
wasm-bindgen-futures = "0.4"
lz4_flex = "0.13"

[profile.release]
lto = true
opt-level = "s"
strip = "debuginfo"
