[package]
name = "wynnmap-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
chrono = { version = "0.4.40", features = ["serde"] }
crc32fast = "1.4.2"
etag = "4.0.0"
futures = "0.3.31"
image = { version = "0.25.5", default-features = false, features = ["png"] }
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = [
    "grpc-tonic",
    "tokio",
    "tonic",
] }
opentelemetry-semantic-conventions = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["tokio"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0.218", features = ["derive", "rc"] }
serde_json = "1.0.140"
tokio = { version = "1.43.1", features = ["rt-multi-thread", "fs", "sync"] }
toml = "1"
tower = { version = "0.5.2", features = ["tokio", "tracing"] }
tower-http = { version = "0.6.2", features = [
    "cors",
    "compression-full",
    "fs",
] }
tracing = "0.1.41"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = "0.3.19"
uuid = { version = "1.15.1", features = ["serde"] }
webp = "0.3.0"
wynnmap-types = { path = "../wynnmap-types" }
