[package]
name = "wynnmap-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
chrono = { version = "0.4", features = ["serde"] }
crc32fast = "1"
etag = "4"
futures = "0.3"
image = { version = "0.25", default-features = false, features = ["png"] }
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", features = [
    "grpc-tonic",
    "tokio",
    "tonic",
] }
opentelemetry-semantic-conventions = { version = "0.31", features = [
    "semconv_experimental",
] }
opentelemetry_sdk = { version = "0.31", features = ["tokio"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "fs", "sync"] }
toml = "1"
tower = { version = "0.5", features = ["tokio", "tracing"] }
tower-http = { version = "0.6", features = ["cors", "compression-full", "fs"] }
tracing = "0.1"
tracing-opentelemetry = "0.32"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["serde"] }
webp = "0.3"
wynnmap-types = { path = "../wynnmap-types" }
