[package]
name = "wynnmap-types"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
crc32fast = "1"
rmp-serde = "1.3"
serde = { version = "1", features = ["derive", "rc"] }
serde_repr = "0.1"
uuid = { version = "1", features = ["serde"] }
zstd = "0.13"
